
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Fix sorting/display bugs on UserGroup ACL grids, add grouping for better visibility
- [#4175] Add modRequest->getClientIp() for better IP handling
- [#4217] Add rank field to modUserGroup
- Update version to 2.1.0-rc-2
- [#4173] Fix issues with math-related output filters and floats
- [#4205] Ensure old modxcms.com provider is removed after change to modx.com provider
- [#4220] Fix modX::makeUrl() when friendly_urls not enabled
- [#4207] Fix issues with checkboxes and Form Customization rules
- [#4013] Fix modX::_log() to pass target to parent::_log() properly

MODX Revolution 2.1.0-rc-1 (March 28, 2011)
====================================
- Fix issue with properties and i18n in Element properties and in drag/drop box
- [#4146] Fix issue where new Content Types were always created as Binary
- [#291] Add principal_targets setting to allow custom ACLs to be loaded by MODX Principals/Users
- [#99] Allow SymLinks/modX->sendForward() to forward to Resources in external Contexts
- [#4147] Changing ContentType extension in grid not refreshing URIs
- [#3967] Fix issue with running user create/update processors more than once in a session
- [#3542] Hide Template Variables tab on Resource create/update pages if no TVs are present
- [#788] FC Rules for TVs now display distinctly for create or update
- [#1118] Add more help for User fields in manager editing page
- [#2578] Fix issues with manager log view page where sorting was off and grid was not sortable
- Fix issue where user-created FC tabs were not removable from a Set
- [#4096] Fix Package Management archive issue when using mapped Windows drives
- [#3785] Add category filter and search box to TV grid on Template panel
- [#65] Make locked Resources be read-only rather than unviewable