@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#4202] Fix issues with file/image TVs urls/paths when using modx path placeholders
 - Fix sorting/display bugs on UserGroup ACL grids, add grouping for better visibility
 - [#4175] Add modRequest->getClientIp() for better IP handling
 - [#4217] Add rank field to modUserGroup
